# GVM_bridge

./: Cargo.toml  License-BSL  README.md
.github/workflows/: rust.yml  rust1.yml  rust2.yml
document/: GVM-Brigde.md
document/img/: ERC20Mock.json
frame/evm-precompile/call-vm/: Cargo.toml
frame/evm-precompile/call-vm/src/: lib.rs
frame/evm-precompile/callwasmc/: Cargo.toml
frame/evm-precompile/callwasmc/src/: lib.rs
frame/vm-bridge/: Cargo.toml
frame/vm-bridge/fixtures/: erc20.wasm  erc20_evm_bytecode.txt
frame/vm-bridge/src/: lib.rs  tests.rs
scripts/: init.sh
