[package]
name = "pallet-evm-precompile-call-vm"
version = "0.1.0"
edition = "2018"
description = "CallWasmC precompiles for EVM pallet."

[dependencies]
log = { version = "0.4.14", default-features = false }
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-contracts = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-evm = {default-features = false, git = "https://github.com/paritytech/frontier.git", tag = "pallet-evm-v5.0.0" }
fp-evm = { default-features = false, git = "https://github.com/paritytech/frontier.git", tag = "pallet-evm-v5.0.0" }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
pallet-vm-bridge = { version = "0.1.0", path = "../../vm-bridge", default-features = false }

[features]
default = ["std"]

std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",	
	"pallet-contracts/std",
	"pallet-evm/std",
	"fp-evm/std",
	"evm/std",
	"codec/std",
	"pallet-evm/std",
	"pallet-vm-bridge/std",
]