[package]
name = "pallet-evm-precompile-callwasmc"
version = "0.1.0"
edition = "2018"
description = "CallWasmC precompiles for EVM pallet."

[dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-contracts = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-evm = {version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/frontier.git" }
fp-evm = {version = "2.0.0", default-features = false, git = "https://github.com/paritytech/frontier.git" }
evm = { version = "0.27.0", default-features = false, features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
pallet-vm-bridge = { version = "0.1.0", path = "../../vm-bridge", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",	
	"pallet-contracts/std",
	"pallet-evm/std",
	"fp-evm/std",
	"evm/std",
	"codec/std",
	"pallet-evm/std",
	"pallet-vm-bridge/std",
]